# kurage-rust

./: Cargo.toml  README.md
.cargo/: shuttle.toml
backend/: Cargo.toml  Dockerfile  compose.yml
backend/e2e/: Cargo.toml
backend/e2e/src/: main.rs
backend/e2e/tests/: e2e_test.rs
backend/markdown_files/: root.md  rust-setup-guide.md
backend/src/: main.rs
backend/src/infrastructure/: db.rs
backend/src/rest/: blog.rs  mod.rs  static_file.rs
backend/src/usecase/: blog.rs  mod.rs  static_file.rs
backend/static/css/: style.css
backend/static/html/: footer.html  header.html  root.html
backend/tests/: e2e_test.rs
frontend/src/app/: page.tsx
markdown_files/: root.md  rust_setup_guide.md  separating-axum-routes.md  test.md
src/: 04-main.rs  05-main.rs  lib.rs  main.rs
src/.tmp/: 01_main.rs  06_main.rs
src/.tmp/use_mry/: 02_use_mry.rs  04_use_mry.rs
src/domain/: models.rs  user.rs
src/infrastructure/: db.rs  web.rs
src/interface/: routes.rs
src/rest/: auth.rs  blog.rs  mod.rs  root.rs  static_file.rs  static_files.rs
src/use_mry/: 01_use_mry.rs  03_use_mry.rs
src/usecase/: auth.rs  blog.rs  blog_usecase.rs  fetch_data.rs  mod.rs  root.rs  static_file.rs  static_files_usecase.rs  static_usecase.rs
static/css/: markdown_style.css  style.css
static/html/: blog-header.html  footer.html  header.html
