[package]
name = "kurage-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tower = "0.4"
comrak = "0.10"
tokio = { version = "1", features = ["full"] }
mime_guess = "2.0"
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = "1.0"
tera = "1.15.0"